# MobiExo

./: README.md  README_gen72.md  test.py
RemoteDriving_send/src/common/compute/: CMakeLists.txt  package.xml
RemoteDriving_send/src/common/compute/include/compute/: map.h  trans_coord.h
RemoteDriving_send/src/common/compute/src/: map.cpp
RemoteDriving_send/src/custom_msgs/: CMakeLists.txt
RemoteDriving_send/src/custom_msgs/msg/Controller/: PRNDShiftCmd.msg  SteeringCmd.msg  TrqBreCmd.msg
RemoteDriving_send/src/custom_msgs/msg/Detection/: ImageObject.msg  ImageObjectArray.msg  LidarRawObjectArray.msg  ObjectArray.msg
RemoteDriving_send/src/custom_msgs/msg/Localization/: CurPose.msg
RemoteDriving_send/src/custom_msgs/msg/Map/: LaneLineArray.msg
RemoteDriving_send/src/custom_msgs/msg/SmallCar/: ControlMode.msg
RemoteDriving_send/src/custom_msgs/msg/Task/: RoadAttri.msg
RemoteDriving_send/src/custom_msgs/msg/VehicleStat/: VehicleStat.msg
RemoteDriving_send/src/custom_msgs/srv/APP/: App.srv
RemoteDriving_send/src/custom_msgs/srv/BCM/: BrakeLightCmd.srv  DoorCmd.srv  EPBCmd.srv  FogLampCmd.srv  LKSStatusCmd.srv
RemoteDriving_send/src/custom_msgs/srv/LIDAR/: Wharf.srv
RemoteDriving_send/src/custom_msgs/srv/TASK/: Task.srv
RemoteDriving_send/src/custom_msgs/srv/V2X/: GateStat.srv  TrafficLight.srv
RemoteDriving_send/src/path_publisher/: CMakeLists.txt  package.xml
RemoteDriving_send/src/path_publisher/launch/: path_publisher.launch
RemoteDriving_send/src/path_publisher/maps/: gps_map.pgm  gps_map.yaml
RemoteDriving_send/src/path_publisher/rviz/: Pure_Pursuit.rviz
RemoteDriving_send/src/path_publisher/src/: 1.txt  allpath.txt  chenggongduoduan.cpp  chenggongforword.cpp  daocehruku1111.txt  dierduan  diyiduan  path_publisher.cpp  path_publisher1111.cpp  pose_data.txt  topicchenggong.cpp
RemoteDriving_send/src/perception/localization/navigation_driver/NPOS_220/: CMakeLists.txt  package.xml
RemoteDriving_send/src/perception/localization/navigation_driver/nova_nav/: CMakeLists.txt  log.txt  package.xml
RemoteDriving_send/src/perception/mapping/road_lane_pulisher/: CMakeLists.txt
RemoteDriving_send/src/perception/mapping/road_lane_pulisher/src/: road_lane.cpp  road_lane.h
RemoteDriving_send/src/udp_to_path/: CMakeLists.txt  package.xml
RemoteDriving_send/src/udp_to_path/launch/: udp.launch
RemoteDriving_send/src/udp_to_path/src/: udp_to_path.cpp
RemoteDriving_send/src/visualization/lidarmarker/: CMakeLists.txt  package.xml
RemoteDriving_send/src/visualization/lidarmarker/launch/: lidarmarker.launch
RemoteDriving_send/src/visualization/lidarmarker/src/: main.cpp
RemoteDriving_use/src/bag_to_txt/: CMakeLists.txt  package.xml
RemoteDriving_use/src/bag_to_txt/launch/: bag_to_txt.launch
RemoteDriving_use/src/bag_to_txt/src/: main.cpp
RemoteDriving_use/src/custom_msgs/: CMakeLists.txt  package.xml
RemoteDriving_use/src/custom_msgs/msg/Ars/: ObjectList.msg
RemoteDriving_use/src/custom_msgs/msg/Camera_Status/: Alert_Stat.msg  CamObj.msg  CamObjArray.msg  Cam_Obj.msg  Camera_Obj.msg  Camera_Obj_Array.msg  Fusion_Datas.msg  Fusion_Datas_Array.msg  Lane_Stat.msg
RemoteDriving_use/src/custom_msgs/msg/Controller/: AEBCmd.msg  GearCmd.msg  SteerRegine.msg  SteeringCmd.msg  TrqBreCmd.msg  TrqBreCmd485.msg
RemoteDriving_use/src/custom_msgs/msg/Detection/: ArsRadarRaw.msg  ArsRadarRawArray.msg  ImageObject.msg  ImageObjectArray.msg  LidarRawObject.msg  Object.msg  RadarObject.msg  RadarObjectArray.msg  RadarRawObject.msg  RadarRawObjectArray.msg
RemoteDriving_use/src/custom_msgs/msg/Fusion/: RadarPix.msg  RadarPixArray.msg
RemoteDriving_use/src/custom_msgs/msg/Localization/: NaviData.msg  ParkSpace.msg  SlamPose.msg  UWBPose.msg
RemoteDriving_use/src/custom_msgs/msg/Map/: LaneLine.msg
RemoteDriving_use/src/custom_msgs/msg/Planning/: AEB.msg  Path.msg  Request.msg
RemoteDriving_use/src/custom_msgs/msg/SmallCar/: ControlMode.msg  PointSelect.msg
RemoteDriving_use/src/custom_msgs/msg/Task/: ImageDetect.msg  TaskAttri.msg
RemoteDriving_use/src/custom_msgs/msg/TurnLightStat/: TurnLightStat.msg
RemoteDriving_use/src/custom_msgs/msg/VehicleStat/: VehicleStat.msg
RemoteDriving_use/src/custom_msgs/srv/BCM/: HornsCmd.srv  LowHeadLightCmd.srv  SideLampsCmd.srv  TurnLightCmd.srv  WindowCmd.srv  WipersCmd.srv
RemoteDriving_use/src/custom_msgs/srv/MAP_SW/: Map_Switch.srv
RemoteDriving_use/src/custom_msgs/srv/PLAN/: Control.srv  Route.srv
RemoteDriving_use/src/custom_msgs/srv/TASK/: Task.srv
RemoteDriving_use/src/custom_msgs/srv/V2X/: Ambulance.srv
RemoteDriving_use/src/custom_msgs/srv/WARN/: Warn.srv
RemoteDriving_use/src/map_switch_client_pkg/: CMakeLists.txt  package.xml
RemoteDriving_use/src/map_switch_client_pkg/src/: map_switch_client.cpp
RemoteDriving_use/src/perception/localization/DTU/: CMakeLists.txt  package.xml
RemoteDriving_use/src/perception/localization/DTU/launch/: dtu.launch
RemoteDriving_use/src/perception/localization/DTU/src/: dtu_api.cpp  dtu_api.h  main.cpp  socket_api.cpp  socket_api.h  uart_api.cpp
RemoteDriving_use/src/perception/localization/gnss_localizer/: CMakeLists.txt
RemoteDriving_use/src/perception/localization/gnss_localizer/launch/: gnss_localizer.launch  gnss_localizer_slam_gnss.launch  gnss_localizer_slamindoor.launch  gnss_localizer_uwb.launch
RemoteDriving_use/src/perception/localization/gnss_localizer/src/: simple_localization.cpp  simple_localization_slam_gnss.cpp  simple_localization_slamindoor.cpp  simple_localization_uwb.cpp
RemoteDriving_use/src/perception/localization/navigation_driver/cgi_navigation/: CMakeLists.txt  package.xml
RemoteDriving_use/src/perception/mapping/road_lane_pulisher/: package.xml
RemoteDriving_use/src/perception/mapping/road_lane_pulisher/launch/: road_lane_pub.launch
RemoteDriving_use/src/perception/mapping/road_lane_pulisher/src/: main.cpp
RemoteDriving_use/src/udp_package/: CMakeLists.txt
RemoteDriving_use/src/udp_package/launch/: udp_package.launch
RemoteDriving_use/src/udp_package/src/: udp_sender.cpp
scripts/: cmd_sim.py  (+7 more)
(+157 files in other folders)
