<?xml version="1.0"?>
<package format="2">
  <name>path_publisher</name>
  <version>0.0.0</version>
  <description>The pure_pursuit package</description>

  <maintainer email="youremail@example.com">Your Name</maintainer>
  <license>BSD</license>

  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2</depend>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>tf</build_depend>
  <build_export_depend>tf</build_export_depend>
  <exec_depend>tf</exec_depend>

  <export>
  </export>
</package>
