<?xml version="1.0"?>
<package format="2">
  <name>compute</name>
  <version>0.0.0</version>
  <description>The compute package</description>

  <maintainer email="sushold@todo.todo">sushold</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
